--- a/Client/Pages/Test/MarkTest.razor
+++ b/Client/Pages/Test/MarkTest.razor
@@ -1,5 +1,134 @@
-﻿<h3>MarkTest</h3>
+﻿@page "/test/marktest/{Id:guid}"
+@attribute [Authorize(Roles = "Administrators, Teachers")]
+@inject NavigationManager Navigation
+@inject HttpClient Http
+<h3>Edit Employee</h3>
+
+<h4>Create a test</h4>
+<br />
+<EditForm Model="Exam" OnValidSubmit="@HandleValidSubmit">
+    <DataAnnotationsValidator />
+
+    <div class="form-check group">
+        <label class="control-label">Exam name</label>
+        <InputText @bind-Value="@Exam.ExamName" class="form-control" />
+        <ValidationMessage For="@(() => Exam.ExamName)" />
+    </div>
+    <br />
+    <div class="form-check group">
+        <label class="control-label">Exam code: @Exam.ExamCode</label>
+    </div>
+    <br />
+    @foreach (var ans in answerList)
+    {
+
+        <div class="form-check group">
+            <label class="control-label">Question</label>
+            <InputText @bind-Value="@quest.Text" class="form-control" />
+            <ValidationMessage For="@(() => quest.Text)" />
+            <br />
+            <label class="control-label">Answer</label>
+            <label class="control-label">Input Type:</label>
+            <br />
+            <br />
+            <label class="control-label">Mark</label>
+            <InputNumber @bind-Value="@quest.Mark" class="form-control" />
+            <br />
+        </div>
+        <br />
+        <br />
+    }
+    <br />
+    <br />
+    <button type="submit" class="btn btn-primary">
+        <i class="fas fa-save"></i> Submit
+    </button>
+    <br />
+</EditForm>
 
 @code {
+    private Exam Exam = new Exam();
+    private StudentExam StudentExam = new StudentExam();
+    private List<Question> questionList = new List<Question>();
+    private List<Answer> answerList = new List<Answer>();
+    [Parameter] public Guid Id { get; set; }
+
+
+    protected override async Task OnInitializedAsync()
+    {
+        try
+        {
+            StudentExam = await Http.GetFromJsonAsync<StudentExam>($"/api/StudentExams/{Id}");
+            questionList = await Http.GetFromJsonAsync<List<Question>>("/api/Questions");
+            answerList = await Http.GetFromJsonAsync<List<Answer>>("/api/Answers");
+
+            foreach (var quest in questionList)
+            {
+                //checking if questions are in exam
+                if (quest.ExamId != StudentExam.ExamId)
+                {
+                    questionList.Remove(quest);
+                }
+            }
+
+            foreach (var ans in answerList)
+                {
+                //matching answer to correct question and student
+                    if (ans.StudentId == StudentExam.StudentId)
+                    {
+                    foreach(var quest in questionList)
+                        {
+                            if (quest.QuestionId != ans.QuestionId)
+                            {
+                             answerList.Remove(ans);
+                            }
+                        }
+                    }
+                }
+
+
+        }
+        catch (AccessTokenNotAvailableException exception)
+        {
+            exception.Redirect();
+        }
+        catch (Exception e)
+        {
+
+        }
+    }
+
+
+    private async void HandleValidSubmit()
+    {
+        try
+        {
+            Exam.QuestionAmount = questionList.Count();
+            //stuff everything into exam and then post it
+            var response = await Http.PutAsJsonAsync($"/api/Exams/{Exam.ExamId}", Exam);
+            response.EnsureSuccessStatusCode();
+            var content = await response.Content.ReadAsStringAsync();
+            var project = JsonConvert.DeserializeObject<Exam>(content);
+            foreach (var quest in questionList)
+            {
+                var response1 = await Http.PutAsJsonAsync($"/api/Questions/{quest.QuestionId}", quest);
+                response1.EnsureSuccessStatusCode();
+                var content1 = await response1.Content.ReadAsStringAsync();
+                var project1 = JsonConvert.DeserializeObject<Question>(content1);
+
+            }
+            Navigation.NavigateTo("test/viewtest");
+        }
+        catch (AccessTokenNotAvailableException exception)
+        {
+            exception.Redirect();
+        }
+        catch (Exception e)
+        {
+
+        }
+
+
+    }
 
 }
